<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gablec_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gablec_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gablec_title"
        />

    <TextView
        android:id="@+id/gablec_pricelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gablec_desc"
        android:text="@string/gablec_pricelabel" />

    <TextView
        android:id="@+id/gablec_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gablec_desc"
        android:layout_toRightOf="@+id/gablec_pricelabel" />

    <TextView
        android:id="@+id/restaurant_titlelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gablec_pricelabel"
        android:text="@string/restaurant_titlelabel" />

    <TextView
        android:id="@+id/restaurant_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gablec_price"
        android:layout_toRightOf="@+id/restaurant_titlelabel" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restaurant_titlelabel"
        android:text="@string/date_label" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restaurant_title"
        android:layout_marginBottom="20px"
        android:layout_toRightOf="@+id/date_label" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15px"
        android:layout_marginBottom="10px"
        android:background="#ffffff"
        android:padding="2dp" />

</RelativeLayout>
